--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "body-parser": "1.19.0",
+    "jquery": "^3.3.1",
     "express": "4.17.1",
     "morgan": "1.9.1",
     "mysql": "^2.17.1",
